fix(css): prevent background movement on mobile by using position absolute

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 /* HOME */
 
 .background-image {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
